# ride

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  REPL.hs  Test.hs  apply-refact.sh  imports.md  jetpack-gen-output.md  ride.cabal  stack.yaml
chrotomate/: LICENSE  Readme.md  chrotomate.cabal  stack.yaml  startChrome.sh
chrotomate/app/: Chromium.hs  Command.hs  DB.hs  Main.hs  Opts.hs  Server.hs
chrotomate/src/: Chrotomate.hs
chrotomate/src/Chrome/: Chromium.hs  Command.hs  DB.hs  Server.hs
chrotomate/static/: griddata.js  index.html
db-layer/: Models.hs  db-layer.cabal
dgx/: .gitignore  Notes.md  README.md  devel.sh  dgx.cabal  stack.yaml  stylish-haskell.yaml
dgx/db-layer/: Models.hs  db-layer.cabal
dgx/src/: App.hs  Forms.hs  Util.hs
dgx/src/Handler/: LinkShortener.hs  Register.hs  Test.hs
fastci/: fastci.cabal  stack.yaml
fastci/src/: Lib.hs
haskell-web-ide/: README.md  haskell-web-ide.cabal  stack.yaml
haskell-web-ide/src/: Files.hs  Main.hs
haskell-web-ide/static/: index.html
jetpack/: README.md  full-exported-symbol-list.txt  imports.md  jetpack.cabal  stack.yaml
jetpack-gen/: README.md  ghc-pkg.help  jetpack-gen-output.md  jetpack-gen.cabal  pkg.describe
jetpack-gen/app/: Main.hs
jetpack-gen/doc/: README.md  a.dump  prelude-exports
jetpack-gen/src/: Gen.hs  Iface.hs  Log.hs  Main.hs  NameInfos.hs  State.hs  Types.hs
jetpack-gen/src/IDE/: Gen.hs  Iface.hs  JetpackGen.hs  NameInfos.hs  State.hs  Types.hs
jetpack-gen/src/IDE/JetpackGen/: Cabal.hs  Modules.hs  Names.hs
jetpack/src/: Codec.Archive.Tar.AsTar.hs  Codec.Archive.Tar.Check.AsTar.hs  Codec.Archive.Tar.Entry.AsTar.hs  Codec.Compression.GZip.AsGzip.hs  Data.ByteString.AsBs.hs  Data.ByteString.Char8.AsBs.hs  Data.ByteString.Lazy.AsLbs.hs  Data.ByteString.Lazy.Char8.AsLbs.hs  Data.Conduit.AsC.hs  Data.Conduit.Binary.AsCb.hs  Data.Conduit.List.AsCl.hs  Data.HashMap.Strict.AsHm.hs  Data.List.NonEmpty.AsNe.hs  Data.Map.Strict.AsMap.hs  Data.Set.AsSet.hs  Data.Text.AsT.hs  Data.Text.Encoding.AsT.hs  Data.Text.IO.AsT.hs  Data.Text.Lazy.AsLt.hs  Data.Text.Lazy.Encoding.AsLt.hs  Data.Text.Lazy.IO.AsLt.hs  Exports.hs  JetPack.hs  QualifiedText.hs  Text.Megaparsec.AsMp.hs  allExportsFinal.txt
jetpack/src/Codec/Archive/Tar/: AsTar.hs
jetpack/src/Codec/Archive/Tar/Check/: AsTar.hs
jetpack/src/Codec/Archive/Tar/Entry/: AsTar.hs
jetpack/src/Codec/Compression/GZip/: AsGzip.hs
jetpack/src/Control/Concurrent/: AsCtrl.hs
jetpack/src/Control/Concurrent/STM/: AsStm.hs
jetpack/src/Control/Monad/IO/Class/: AsTrans.hs
jetpack/src/Control/Monad/State/Lazy/: AsMtl.hs
jetpack/src/Control/Monad/Trans/Class/: AsMtl.hs  AsTrans.hs
jetpack/src/Control/Monad/Trans/Resource/: AsTrans.hs
jetpack/src/Control/Monad/Trans/State/Lazy/: AsTrans.hs
jetpack/src/Data/Aeson/: AsJs.hs  AsJson.hs
jetpack/src/Data/Aeson/Lens/: AsJs.hs  AsJson.hs
jetpack/src/Data/Aeson/Types/: AsJs.hs
jetpack/src/Data/Aeson/Types/Class/: AsJs.hs
jetpack/src/Data/ByteString/: AsBs.hs
jetpack/src/Data/ByteString/Char8/: AsBs.hs
jetpack/src/Data/ByteString/Lazy/: AsLbs.hs
jetpack/src/Data/ByteString/Lazy/Char8/: AsC8.hs  AsLbs.hs
jetpack/src/Data/CaseInsensitive/: AsCi.hs
jetpack/src/Data/Conduit/: AsC.hs
jetpack/src/Data/Conduit/Binary/: AsCb.hs
jetpack/src/Data/Conduit/List/: AsCl.hs
jetpack/src/Data/HashMap/Strict/: AsHm.hs
jetpack/src/Data/List/NonEmpty/: AsNe.hs
jetpack/src/Data/Map/: AsLm.hs  AsLmap.hs  AsMap.hs  AsMap_lazy.hs
jetpack/src/Data/Map/Strict/: AsM.hs  AsMap.hs
jetpack/src/Data/Set/: AsSet.hs
jetpack/src/Data/Text/: AsT.hs
jetpack/src/Data/Text/Encoding/: AsT.hs
jetpack/src/Data/Text/IO/: AsT.hs
jetpack/src/Data/Text/Lazy/: AsLt.hs
jetpack/src/Data/Text/Lazy/Encoding/: AsLt.hs
jetpack/src/Data/Text/Lazy/IO/: AsLt.hs
jetpack/src/Data/Vector/: AsVec.hs
jetpack/src/Lens/Micro/Platform/: AsLens.hs
jetpack/src/Network/HTTP/Client/: AsHttp.hs
jetpack/src/Network/HTTP/Conduit/: AsHttp.hs
jetpack/src/Network/HTTP/Types/: AsHttp.hs  AsWai.hs
jetpack/src/Network/HTTP/Types/Header/: AsHttp.hs  AsWai.hs
jetpack/src/Network/HTTP/Types/Status/: AsHttp.hs  AsWai.hs
jetpack/src/Network/URI/: AsUri.hs
jetpack/src/Network/Wai/: AsWai.hs
jetpack/src/Network/Wai/Handler/Warp/: AsWai.hs
jetpack/src/Network/Wai/Middleware/RequestLogger/: AsWai.hs
jetpack/src/Network/Wai/Middleware/Static/: AsWai.hs
jetpack/src/Network/WebSockets/: AsWs.hs
jetpack/src/Network/WebSockets/Connection/: AsWs.hs
jetpack/src/Options/Applicative/: AsOpt.hs
jetpack/src/Options/Applicative/Builder/: AsOpt.hs
jetpack/src/Options/Applicative/Builder/Completer/: AsOpt.hs
jetpack/src/Options/Applicative/Common/: AsOpt.hs
jetpack/src/Options/Applicative/Extra/: AsOpt.hs
jetpack/src/ReexportDemo/: AsDemo.hs
jetpack/src/System/Console/ANSI/: AsAnsi.hs
jetpack/src/System/Directory/: AsEnv.hs
jetpack/src/System/Environment/: AsEnv.hs
jetpack/src/System/Exit/: AsEnv.hs
jetpack/src/System/IO/: AsEnv.hs
jetpack/src/System/IO/Strict/: AsSio.hs
jetpack/src/System/Process/: AsEnv.hs
jetpack/src/Text/Megaparsec/: AsMp.hs  AsParse.hs
jetpack/src/Web/Spock/Digestive/: AsSpock.hs
jetpack/src/Web/Spock/Safe/: AsSpock.hs
lucid-forms/: lucid-forms.cabal
reexport-demo/: README.md  reexport-demo.cabal
reexport-demo/src/: ReexportDemo.hs
ride/: ride.cabal
ride/src/IDE/: Iface.hs  IfaceOld.hs  JetpackGen.hs  State.hs  Types.hs
ride/src/IDE/JetpackGen/: Cabal.hs  Modules.hs
src/: Files.hs  Main.hs
src/IDE/: Iface.hs  JetpackGen.hs  State.hs  Test1.hs
src/Yolo/: Test.hs
static/: index.html  sublime.js
static/components/codemirror/: codemirror.js
tools/: generate-dependency-graph.sh  repl.sh
twitch-cast/: stack.yaml  twitch-cast.cabal
twitch-cast/src/: HLS.hs  Main.hs  Types.hs
web-playground/: lint.sh  stack.yaml  web-playground.cabal
web-playground/src/: Forms.hs  Hooks.hs  Main.hs  Route.hs  Test.hs  Util.hs
web-playground/src/Handler/: Auth.hs  Home.hs  LinkShortener.hs  User.hs
web-playground/src/Template/: Layout.hs
(+1 files in other folders)
