name:                  ride
version:               0.1.0.0
synopsis:              Haskell Web Ide using Spock, Stack and git-webui
description:           Please see README.md
homepage:              http://github.com/rvion/ride#readme
author:                rvion
maintainer:            example@example.com
copyright:             2010 Author Here
category:              Web
build-type:            Simple
cabal-version:         >=1.10

Library
  hs-source-dirs:      .
  exposed-modules:     REPL
  default-language:    Haskell2010
  default-extensions:  NoMonomorphismRestriction, FlexibleContexts, MagicHash, DataKinds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- -fwarn-unused-imports
  build-depends:       base
                     , transformers
                     , lens
                     , containers
                     , text
                     , bytestring
                     , Spock
                     , lens
                     , cryptohash
                     , wai-middleware-static
                     , wai-extra
                     , aeson
                     , process
                     , filemanip
                     , directory-tree
                     , ghc
                     , bin-package-db
                     , ghc-paths
                     , process-extras
                     , MissingH
                     , yaml
                     , Cabal
                     , directory
                     , filepath
                     , ansi-terminal
                     , transformers
                     , jetpack-gen
                     , split

