name:                chrotomate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rvion/chrotomate#readme
license:             BSD3
license-file:        LICENSE
author:              rvion
maintainer:          vion.remi@gmail.com
copyright:           2010 Author Here
category:            tools
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable chrotomate-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Main Chromium Server Command Opts DB
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , chrotomate
                     , containers
                     , cryptohash
                     , stm
                     , directory-tree
                     , filemanip
                     , strict
                     , http-conduit
                     , lens
                     , lens-aeson
                     , mtl
                     , network
                     , network-uri
                     , process
                     , Spock
                     , text
                     , text
                     , transformers
                     , vector
                     , wai-extra
                     , directory
                     , wai-middleware-static
                     , thyme
                     , optparse-applicative
                     , websockets
  default-language:    Haskell2010

test-suite chrotomate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chrotomate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rvion/chrotomate
