name:                chrotomate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rvion/chrotomate#readme
license:             BSD3
author:              rvion
maintainer:          vion.remi@gmail.com
copyright:           2010 Author Here
category:            tools
build-type:          Simple
cabal-version:       >=1.10

executable chrotomate
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Opts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , chrotomate
                     , containers
                     , cryptohash
                     , stm
                     , directory-tree
                     , filemanip
                     , strict
                     , http-conduit
                     , lens
                     , lens-aeson
                     , mtl
                     , network
                     , network-uri
                     , process
                     , Spock
                     , text
                     , text
                     , transformers
                     , vector
                     , wai-extra
                     , directory
                     , wai-middleware-static
                     , thyme
                     , optparse-applicative
                     , websockets
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Chrome.Chromium Chrome.Command Chrome.DB Chrome.Server
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jetpack
                    --  , aeson
                    --  , bytestring
                    --  , containers
                    --  , cryptohash
                    --  , stm
                    --  , directory-tree
                    --  , filemanip
                    --  , strict
                    --  , http-conduit
                    --  , lens
                    --  , lens-aeson
                    --  , mtl
                    --  , network
                    --  , network-uri
                    --  , process
                    --  , Spock
                    --  , text
                    --  , text
                    --  , transformers
                    --  , vector
                    --  , wai-extra
                    --  , directory
                    --  , wai-middleware-static
                    --  , thyme
                    --  , optparse-applicative
                    --  , websockets

source-repository head
  type:     git
  location: https://github.com/rvion/chrotomate
