name:                db-layer
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/rvion/dblayer#readme
license:             BSD3
author:              rvion
maintainer:          vion.remi@gmail.com
copyright:           x
category:            x
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Models
  build-depends:       base
                     , persistent-template
                     , text
                     , bytestring
                     , time

  default-language:    Haskell2010