name:                  haskell-web-ide
version:               0.1.0.0
synopsis:              Haskell Web Ide using Spock, Stack and git-webui
description:           Please see README.md
homepage:              http://github.com/rvion/ride#readme
author:                rvion
maintainer:            vion.remi@gmail.com
copyright:             Rémi Vion
category:              Web
build-type:            Simple
cabal-version:         >=1.10

executable haskell-web-ide
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Files
  default-language:    Haskell2010
  default-extensions:  NoMonomorphismRestriction, FlexibleContexts, MagicHash, DataKinds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- -fwarn-unused-imports
  build-depends:       base
                     , transformers
                     , containers
                     , text
                     , bytestring
                     , Spock
                     , cryptohash
                     , wai-middleware-static
                     , wai-extra
                     , aeson
                     , process
                     , filemanip
                     , directory-tree
                     , ghc
                     , bin-package-db
                     , ghc-paths
                     , process-extras
                     , MissingH
                     , yaml
                     , Cabal
                     , directory
                     , filepath
                     , ansi-terminal
                     , transformers
                     , split

