name:                  jetpack-gen
version:               0.1.0.0
synopsis:              Simple project template from stack
description:           Please see README.md
homepage:              http://github.com/githubuser/jetpack-gen#readme
license:               BSD3
author:                Author name here
maintainer:            example@example.com
copyright:             2010 Author Here
category:              Web
build-type:            Simple
cabal-version:         >=1.10

executable jetpack-gen
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Iface
                       Types
                       State
                       NameInfos
                       Gen
                       Log
                       Gen.Names
                       Gen.Cabal
                       Gen.Modules
  default-language:    Haskell2010
  default-extensions:  NoMonomorphismRestriction, FlexibleContexts, MagicHash, DataKinds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , lens
                     , containers
                     , text
                     , bytestring
                     , aeson
                     , process
                     , filemanip
                     , directory-tree
                     , ghc
                     , bin-package-db
                     , ghc-paths
                     , process-extras
                     , MissingH
                     , yaml
                     , Cabal
                     , directory
                     , filepath
                     , ansi-terminal
                     , transformers
                     , split


