name:                  jetpack-gen
version:               0.1.0.0
synopsis:              Simple project template from stack
description:           Please see README.md
homepage:              http://github.com/githubuser/jetpack-gen#readme
license:               BSD3
author:                Author name here
maintainer:            example@example.com
copyright:             2010 Author Here
category:              Web
build-type:            Simple
cabal-version:         >=1.10

executable jetpack-gen
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoMonomorphismRestriction, FlexibleContexts, MagicHash, DataKinds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jetpack-gen

library
  hs-source-dirs:      src
  exposed-modules:     Gen
                       Gen.Iface
                       Gen.Types
                       Gen.State
                       Gen.NameInfos
                       Gen.Log
                       Gen.Names
                       Gen.Cabal
                       Gen.Modules
  default-language:    Haskell2010
  default-extensions:  NoMonomorphismRestriction, FlexibleContexts, MagicHash, DataKinds
  build-depends:       base
                     , aeson
                     , ansi-terminal
                     , bin-package-db
                     , bytestring
                     , Cabal
                     , containers
                     , directory
                     , directory-tree
                     , filemanip
                     , filepath
                     , ghc
                     , ghc-paths
                     , MissingH
                     , process
                     , process-extras
                     , split
                     , text
                     , transformers
                     , transformers
                     , yaml



