
name:                jetpack
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/jetpack#readme
license:             BSD3
author:              Rémi Vion
maintainer:          vion.remi@gmail.com
copyright:           2016 Author Here
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JetPack Exports
  other-modules:       Data.Map.AsLm, Data.Map.Strict.AsM, Data.Set.AsSet, Data.HashMap.Strict.AsHm, Data.List.NonEmpty.AsNe, Data.Text.AsT, Data.Text.Encoding.AsT, Data.Text.IO.AsT, Data.Text.Lazy.AsLt, Data.Text.Lazy.Encoding.AsLt, Data.Text.Lazy.IO.AsLt, Data.ByteString.AsBs, Data.ByteString.Char8.AsBs, Data.ByteString.Lazy.AsLbs, Data.ByteString.Lazy.Char8.AsLbs, Codec.Archive.Tar.AsTar, Codec.Archive.Tar.Entry.AsTar, Codec.Archive.Tar.Check.AsTar, Codec.Compression.GZip.AsGzip, Text.Megaparsec.AsMp, Data.Conduit.AsC, Data.Conduit.List.AsCl, Data.Conduit.Binary.AsCb, Lens.Micro.Platform.AsLens, ReexportDemo.AsDemo
  build-depends:       base, base-prelude, unordered-containers, containers, semigroups, text, bytestring, tar, zlib, megaparsec, conduit, conduit-extra, microlens-platform, reexport-demo
  ghc-options:         -Wall -fno-warn-missing-signatures
  default-extensions:  NoMonomorphismRestriction, FlexibleContexts, MagicHash, DataKinds, RankNTypes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rvion/jetpack