
name:                jetpack
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/jetpack#readme
license:             BSD3
author:              Rémi Vion
maintainer:          vion.remi@gmail.com
copyright:           2016 Author Here
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JetPack Exports
  other-modules:       Data.Aeson.Types.AsJs, Options.Applicative.AsOpt, Control.Monad.IO.Class.AsTrans
  build-depends:       base, base-prelude, unordered-containers, containers, transformers, semigroups, websockets, text, bytestring, tar, zlib, megaparsec, conduit, conduit-extra, microlens-platform, reexport-demo, stm, ansi-terminal, optparse-applicative, wai, warp, http-types, case-insensitive, Spock, Spock-digestive, aeson, lens-aeson, mtl, wai-extra, wai-middleware-static, vector
  ghc-options:         -Wall -fno-warn-missing-signatures
  default-extensions:  NoMonomorphismRestriction, FlexibleContexts, MagicHash, DataKinds, RankNTypes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rvion/jetpack