name:                reexport-demo
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/reexport-demo#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ReexportDemo
  build-depends:       base
  default-language:    Haskell2010
