name:                ride
version:             0.1.0.0
synopsis:            Haskell Web Ide using Spock, Stack and git-webui
description:         Please see README.md
homepage:            http://github.com/rvion/ride#readme
author:              rvion
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ride
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Files
                       IDE.Iface
                       IDE.IfaceOld
                       IDE.State
                       IDE.JetpackGen
                       IDE.JetpackGen.Names
                       IDE.JetpackGen.Cabal
  default-language:    Haskell2010
  build-depends:       base
                     , transformers
                     , lens
                     , containers
                     , text
                     , bytestring
                     , Spock
                     , lens
                     , cryptohash
                     , wai-middleware-static
                     , wai-extra
                     , aeson
                     , process
                     , filemanip
                     , directory-tree
                     , ghc
                     , bin-package-db
                     , ghc-paths
                     , process-extras
                     , MissingH
                     , yaml
                     , Cabal
                     , directory
                     , filepath
                     , transformers
                     , split

