name:                web-playground
version:             0.2.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/rvion/ride#readme
license:             BSD3
license-file:        LICENSE
author:              Rémi Vion
maintainer:          vion.remi@gmail.com
copyright:           2015 Rémi Vion
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable dgx
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     Util
                     Route
                     App
                     Hooks
                     Forms
                  -- Models
                  -- Handlers
                     Handler.Home
                     Handler.User
                     Handler.Register
                     Handler.Auth
                     Handler.LinkShortener
                     Handler.Test
                     Template.Layout

  default-language:  Haskell2010

                   -- Descriptions taken here: http://www.stackage.org/lts-3.14
  build-depends:     base
                   -- An efficient packed Unicode text type
                   , text
                   -- A practical form library
                   , digestive-functors
                   -- Clear to write, read and edit DSL for HTML
                   , lucid
                   -- Simple strict heterogeneous lists
                   , hvect
                   -- Another Haskell web framework for rapid development
                   , Spock
                   -- Digestive functors support for Spock
                   , Spock-digestive
                   -- Background workers for Spock
                   , Spock-worker
                   -- A fast, light-weight web server for WAI applications
                   , warp
                   -- HTTP over TLS support for Warp via the TLS package
                   , warp-tls
                   -- Web Application Interface
                   , wai
                   -- Provides some basic WAI handlers and middleware
                   , wai-extra
                   -- Concrete functor and monad transformers
                   , transformers
                   -- Mid-Level PostgreSQL client library
                   , postgresql-simple
                   -- A high-performance striped resource pooling implementation
                   , resource-pool
                   -- Type-safe, multi-backend data serialization
                   , persistent
                   -- Backend for the persistent library using sqlite3
                   , persistent-sqlite
                   -- Type-safe, non-relational, multi-backend persistence
                   , persistent-template
                   -- Fast base16 (hex) encoding and decoding for ByteStrings
                   , base16-bytestring
                   , time
                   , monad-logger
                   , resourcet
                   , random
                   , word8
                   , bytestring
                   , cryptohash
                   , http-types

                   , db-layer
                   , lucid-forms
                   , esqueleto
                   , classy-prelude
                   , hashids
                   -- , base-prelude



  -- ghc-options:        -- -threaded -rtsopts -with-rtsopts=-N -Wall

  default-extensions:
                     DataKinds
                     FlexibleContexts
                     FlexibleInstances
                     GADTs
                     GeneralizedNewtypeDeriving
                     MultiParamTypeClasses
                     NoMonomorphismRestriction
                     OverloadedStrings
                     RankNTypes
                     RecordWildCards
                     TupleSections
                     TypeFamilies
                     NamedFieldPuns
                  -- Allow to use type operators like in (x ': xs)
                     ScopedTypeVariables
                     TypeOperators
                     NoImplicitPrelude
                     LambdaCase
